@@ -10,6 +10,9 @@ if __name__ == '__main__':
     	showcon    = addon.getSetting('showcon')
     	home.setProperty('SpecialFeatures.ContextMenu',showcon)
     	if home.getProperty('SpecialFeatures.Query') != 'true':
-            dbEnterExit().initDb('quikchk2')
-        if monitor.waitForAbort(.6):
+            listitem = xbmc.getInfoLabel('Container({}).ListItem.label'.format(xbmc.getInfoLabel('System.CurrentControlID')))
+            if home.getProperty('SpecialFeatures.Listitem') != listitem:
+                home.setProperty('SpecialFeatures.Listitem', listitem)
+            	dbEnterExit().initDb('quikchk2')
+        if monitor.waitForAbort(1):
             break
